# upload-server

./: .gitignore  README.md  docker-compose.yml
init-sql/: 1-init.sql  2-create-tables.sql  3-create-indexes.sql
services/backend/: .env.sample  Dockerfile  pyproject.toml
services/backend/src/: app.py  run.py
services/backend/src/controllers/: healthcheck.py  main.py  upload.py  upload_controller.py
services/backend/src/db/: dependencies.py  dto.py  repositories.py  session.py
services/backend/src/decorators/: di.py  routing.py
services/backend/src/dto/: file.py  pagination.py
services/backend/src/exceptions/: api_errors.py  repository_errors.py  service_errors.py
services/backend/src/handlers/: dependencies.py  files.py  upload.py
services/backend/src/helpers/: files.py
services/backend/src/interfaces/: handlers.py  pagination.py  protocols.py  repositories.py  services.py
services/backend/src/mixins/: http.py  pagination.py
services/backend/src/services/: dependencies.py  upload_image.py
services/backend/src/settings/: config.py  logging_config.py
services/frontend/: image_detail.html  index.html  upload.html
services/frontend/css/: image_detail.css  styles.css  upload.css
services/frontend/js/: image_detail.js  random-hero.js  tabs.js  upload.js
services/nginx/: nginx.conf
services/pgbouncer/: .env.sample  Dockerfile
services/pgbouncer/commands/: setup_pgbouncer_auth.sh
