[project]
name = "images-server"
version = "0.1.0"
description = "Image upload server with Docker and Nginx"
authors = [
    {name = "Yuriy Okal",email = "wspjoy@google.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
